1999-11-12  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* inv-18.el, inv-19.el, inv-xemacs.el:
	Require 'poe in each submodule.
	(enable-invisible): Changed to function.
	(disable-invisible): Renamed from `end-of-invisible'.
	Changed to function.
	(end-of-invisible): Make obsolete.

1999-11-12  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* README.en (Version specific information): New section.

	* pcustom.el [old custom]: Refer to it.

	* tinycustom.el: checkdoc.

1999-11-12  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* APEL-MK: Require 'path-util explicitly.

1999-11-12  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* APEL-MK, APEL-CFG, APEL-ELS, EMU-ELS: Rewritten.

	* install.el: Removed v18 stuff; now we require 'poe.
	Modified some comments.


1999-11-11  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* localhook.el, pcustom.el: checkdoc.

1999-11-09  Katsumi Yamaoka   <yamaoka@jpl.org>

	* pcustom.el: Warn if the new custom library is not found at the
	compile time.

	* APEL-CFG: Don't add the path of "custom" to `load-path'.

	* poe-18.el (file-executable-p): Returns nil if the file does not
	exist.

1999-11-08  Yuuichi Teranishi  <teranisi@gohome.org>

	* poe-18.el (put-text-property, next-property-change, 
	text-properties-at): Define as null function.

1999-11-02  Katsumi Yamaoka   <yamaoka@jpl.org>

	* poe-18.el (add-text-properties, get-text-property): Define as
	null function.
	(file-executable-p): New function.


1999-10-22  Katsumi Yamaoka   <yamaoka@jpl.org>

	* APEL: Version 9.23 released.

1999-10-22  Katsumi Yamaoka   <yamaoka@jpl.org>

	* APEL-MK (compile-apel-package): Compile `emu-modules-to-compile'
	instead of `emu-modules'.
	(compile-apel): Likewise.

	* EMU-ELS (emu-modules-to-compile): New variable which is used for
	compiling in APEL-MK.  If the feature `utf-2000' is provided,
	`mcs-xmu' is removed from its value even if `emu-modules' contains
	it.
	(emu-modules-not-to-compile): New variable.
