@@ -3,21 +3,54 @@
 ;;; Commentary:
 
 ;; Use this file to override variables defined in APEL-MK.
+;;
+;; The following variables are used in APEL-MK.
+;; Note that you cannot use them in this file.
+;;
+;; For Emacs, or XEmacs without package system:
+;;
+;; PREFIX:	Normally, "/usr/local".
+;;		Installer will try to detect it automatically.
+;; LISPDIR:	"PREFIX/share/emacs/site-lisp" if Emacs 19.29 and later.
+;;		"PREFIX/lib/emacs/site-lisp" if Emacs 19.28 and earlier.
+;;		Installer will try to detect it from PREFIX.
+;; VERSION_SPECIFIC_LISPDIR:	"PREFIX/share/emacs/VERSION/site-lisp"
+;;		if Emacs 19.31 and later, otherwise, same as LISPDIR.
+;;
+;; APEL_PREFIX:	subdirectory of LISPDIR where APEL modules will be
+;;		installed, or "" if you don't want to make subdirectory.
+;; EMU_PREFIX:	subdirectory of VERSION_SPECIFIC_LISPDIR where EMU
+;;		modules will be installed, or "" if you don't want to
+;;		make subdirectory.
+;;
+;; APEL_DIR:	The directory where APEL modules will be installed.
+;;		Generated from LISPDIR and APEL_DIR if it is not set.
+;; EMU_DIR:	The directory where EMU modules will be installed.
+;;		Generated from VERSION_SPECIFIC_LISPDIR and EMU_DIR if
+;;		it is not set.
+;;
+;; For XEmacs with package system:
+;;
+;; PACKAGEDIR:	"/usr/local/lib/xemacs/xemacs-packages"
+;;		Installer will try to detect it automatically.
+;;
+;; APEL_PREFIX:	subdirectory of PACKAGEDIR where both APEL and EMU
+;;		modules will be installed.
 
 ;;; Code:
 
 ;;; "custom" library.
 
-;; If you use "new custom" but do not use "subdirs.el" to add "custom"
-;; to your load-path, uncomment and edit this.
+;; If you want to use "new custom" but do not use "subdirs.el" to add
+;; "custom" directory to your load-path, uncomment and edit this.
 ;; (setq load-path
 ;;       (cons "/usr/local/share/emacs/19.34/site-lisp/custom" load-path))
 
 
 ;;; Install to home directory.
 
-;; If you want to install APEL to home directory and you already have
-;; the standard hierarchy such as "~/share/emacs/site-lisp" and
+;; If you want to install APEL to your home directory and you already
+;; have the standard hierarchy such as "~/share/emacs/site-lisp" and
 ;; "~/share/emacs/VERSION/site-lisp", uncomment and edit this.
 ;; (setq PREFIX "~/")
 
@@ -27,9 +60,6 @@
 
 
 ;;; Install to site-lisp directories.
-
-;; (setq APEL_PREFIX "apel")
-;; (setq EMU_PREFIX "emu")
 
 ;; (setq PREFIX "/usr/local")
 
@@ -44,12 +74,15 @@
 ;; XEmacs 21.0 and later.
 ;; (setq PACKAGEDIR "/usr/local/lib/xemacs/xemacs-packages")
 
-;; If you want to install all of APEL files to VERSION_SPECIFIC_LISPDIR,
-;; uncomment this.
-;; (setq APEL_DIR (expand-file-name APEL_PREFIX VERSION_SPECIFIC_LISPDIR))
+;; (setq APEL_PREFIX "apel")
+;; (setq EMU_PREFIX "emu")
 
-;; You can specify APEL_DIR and EMU_DIR directly.
-;; (setq APEL_DIR (expand-file-name APEL_PREFIX LISPDIR))
-;; (setq EMU_DIR (expand-file-name EMU_PREFIX VERSION_SPECIFIC_LISPDIR))
+;; If you want to install all of APEL modules to VERSION_SPECIFIC_LISPDIR,
+;; uncomment and edit this.
+;; (setq APEL_DIR "/usr/local/share/emacs/19.34/site-lisp/apel")
+
+;; You can specify APEL_DIR and EMU_DIR directly.  Uncomment and edit this.
+;; (setq APEL_DIR "/usr/local/share/emacs/site-lisp/apel")
+;; (setq EMU_DIR "/usr/local/share/emacs/19.34/site-lisp/emu")
 
 ;;; APEL-CFG ends here
