@@ -1,4 +1,4 @@
-;;; APEL-ELS --- list of APEL modules to install -*-Emacs-Lisp-*-
+;;; APEL-ELS --- list of APEL modules to install. -*-Emacs-Lisp-*-
 
 ;;; Commentary:
 
