@@ -1,4 +1,4 @@
-;;; EMU-ELS --- list of EMU modules to install -*-Emacs-Lisp-*-
+;;; EMU-ELS --- list of EMU modules to install. -*-Emacs-Lisp-*-
 
 ;;; Commentary:
 
