@@ -1,3 +1,7 @@
+1999-11-13  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>
+
+	* APEL-MK, APEL-CFG, APEL-ELS, EMU-ELS, Makefile: Revised.
+
 1999-11-12  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>
 
 	* inv-18.el, inv-19.el, inv-xemacs.el:
